--- a/config.toml
+++ b/config.toml
@@ -75,7 +75,7 @@ title = "801 Labs"
 
   [[menu.social]]
     name = "IRC chat"
-    url = "https://freenode.net/kb/answer/registration"
+    url = "irc://chat.freenode.net/#dc801"
     weight = 600
     pre = "fa fa-hashtag"
 
@@ -93,27 +93,15 @@ title = "801 Labs"
 
   [[menu.social]]
     name = "FaceBook"
-    url = "#"
+    url = "https://fb.me/801labs"
     weight = 900
     pre = "fab fa-facebook"
-
-  [[menu.social]]
-    name = "Instagram"
-    url = "#"
-    weight = 1000
-    pre = "fab fa-instagram"
 
   [[menu.social]]
     name = "Twitter"
     url = "https://twitter.com/801labs"
     weight = 1100
     pre = "fab fa-twitter"
-
-  [[menu.social]]
-    name = "Read our posts"
-    url = "/blog/"
-    weight = 1200
-    pre = "fas fa-book"
 
   [[menu.footer]]
     name = "Code Of Conduct"
