--- a/config.toml
+++ b/config.toml
@@ -2,6 +2,9 @@ baseURL = ""
 languageCode = "en-us"
 title = "801 Labs"
 
+[params]
+  paypalLink = "https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=BWV8WFGYAEECN&source=website"
+
 [menu]
 
   [[menu.main]]
